[tool.poetry]
name = "20220417-uspppm"
version = "0.1.0"
description = ""
authors = ["Alexander Junge <alexander.junge@gmail.com>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
transformers = "^4.18.0"
sentence-transformers = "^2.2.0"
pandas = "^1.3"
datasets = "^2.1.0"
gradio = "^2.9.4"

[tool.poetry.dev-dependencies]
ipykernel = "^6.13.0"
ipywidgets = "^7.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
